--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,16 @@ body {
   font-family: sans-serif;
 }
 
+.main-grid {
+  height: 100vh;
+}
+
 img {
   max-width: 100%;
 }
 
 .logo {
-  max-width: 33vw;
+  max-width: clamp(50px,33vw,600px);
 }
 
 .btn {
@@ -66,11 +70,16 @@ img {
   transform: scale(1.35, 1.85);
 }
 
-.title {
+.title,
+.subtitle {
   color: var(--clr-accent);
   margin: 1em 0;
   line-height: 1;
   font-size: clamp(2rem, 5vw, 6rem);
+}
+
+.subtitle {
+  font-size: clamp(1rem, 3vw, 3rem);
 }
 
 header {
@@ -105,6 +114,7 @@ header {
 .secondary-images {
   display: flex;
   gap: 0.5em;
+  
 }
 
 footer {
@@ -121,7 +131,18 @@ footer {
   opacity: 0.5;
 }
 
-@media (min-width: 1200px) {
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-details-title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+@media (min-width: 1000px) {
   body {
     margin: 0;
   }
@@ -129,10 +150,10 @@ footer {
   .main-grid {
     display: grid;
     grid-template-columns:
-      minmax(1em, 1fr)
-      repeat(2, minmax(15rem, 35rem))
-      minmax(5rem, 10rem)
-      minmax(1em, 1fr);
+      minmax(8em, 1fr)
+      repeat(2, minmax(15rem, 45rem))
+      minmax(5rem, 15rem)
+      minmax(8em, 1fr);
     gap: 2em;
     position: relative;
   }
@@ -148,7 +169,7 @@ footer {
   }
 
   main {
-    grid-column: 2 / -1;
+    grid-column: 2 / 5;
     display: grid;
     grid-template-columns: subgrid;
     grid-auto-rows: min-content;
@@ -167,35 +188,53 @@ footer {
     z-index: -10;
   }
 
-  .title {
+  .title,
+  .subtitle {
     grid-column: 1 / 3;
     grid-row: 1;
   }
 
+  .subtitle {
+    padding-top: 10%;
+    line-height: 1.25;
+  }
+
   .description {
-    grid-column: 1 / 2;
+    margin: 1em 0;
+    padding-left: 4em;
+    font-size: 1.75rem;
+    grid-column: 1 / 3;
+    border-left: 4em solid var(--clr-accent);
+    border-top-left-radius: 2em;
+    border-bottom-left-radius: 2em;
   }
 
   .description::after {
     /* content: "DROPLET"; */
     font-size: 50vw;
     position: absolute;
-    opacity: 0.03;
+    opacity: 0.01;
     z-index: -100;
     line-height: 1;
-        /* grid-column: 1 / 3; */
+    /* grid-column: 1 / 3; */
     left: -0.15em;
     top: 0;
   }
-
+  
+  .span__break {
+    display: block;
+    margin-bottom: 1em
+  }
   .primary-image {
     grid-column: 2 / 3;
-    grid-row: 1 / span 5;
+    grid-row: 1 / -1;
     z-index: -1;
     height: 100%;
     max-height: 500px;
-    width: min(100%, 1250px);
+    width: min(100%, 1500px);
     object-fit: cover;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
   .secondary-images {
@@ -203,23 +242,16 @@ footer {
     margin-top: 4em;
   }
 
+  .btn {
+    grid-column: 2 / 3;
+    font-size: 2rem;
+  }
+
   footer {
-    grid-column: 2 / 3;
-  }
-}
-
-@media (min-width: 800px) {
-  main::after {
-    grid-column: 3 / 4;
-  }
-
-  .primary-image {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-
-  .nav,
-  .secondary-images {
-    grid-column: 2 / 3;
+    border-top: .75em solid var(--clr-accent);
+    border-top-left-radius: .5em;
+    border-top-right-radius: .5em;
+    padding-top: 5em;
+    grid-column: 2 / 5;
   }
 }
